# commit-boost-client

./: .gitignore  Cargo.toml  config.example.toml
benches/pbs/src/: main.rs
crates/cli/src/: docker_init.rs
crates/common/src/: types.rs
crates/common/src/config/: mod.rs  pbs.rs  validation.rs
crates/common/src/pbs/types/: get_header.rs
crates/common/src/signer/: loader.rs  store.rs
crates/common/src/signer/schemes/: bls.rs
crates/pbs/src/: lib.rs  metrics.rs  registration_cache.rs
crates/pbs/src/mev_boost/: get_header.rs  register_validator.rs  submit_block.rs
crates/signer/: Cargo.toml
crates/signer/src/: service.rs
crates/signer/src/manager/: dirk.rs
crates/xga/: Cargo.toml  Dockerfile  xga.toml
crates/xga/contracts/: XGARegistry.sol
crates/xga/src/: abi_helpers.rs  api.rs  api_handlers.rs  cache.rs  commitment.rs  config.rs  eigenlayer.rs  error.rs  lib.rs  main.rs  metrics.rs  metrics_wrapper.rs  poller.rs  property_tests.rs  relay.rs  relay_client.rs  relay_communication.rs  retry.rs  service.rs  signer.rs  state.rs  state_manager.rs  state_traits.rs  test_helpers.rs  test_matchers.rs  test_support.rs  test_utils.rs  tests.rs  types.rs  validation.rs
crates/xga/src/infrastructure/: circuit_breaker.rs  error.rs  http_client.rs  mod.rs  rate_limiter.rs  utils.rs
crates/xga/src/webhook/: handlers.rs  mod.rs  monitoring.rs  processing.rs  server.rs  state.rs  utils.rs  validation.rs
crates/xga/tests/: circuit_breaker_integration_test.rs  commitment_hash_test.rs  config_validation_test.rs  eigenlayer_integration_test.rs  eigenlayer_logic_test.rs  eigenlayer_shadow_mode_test.rs  eigenlayer_webhook_test.rs  infrastructure_utils_test.rs  integration_test.rs  relay_integration_test.rs  signature_verification_test.rs  ssz_encoding_test.rs  types_display_test.rs  webhook_integration_test.rs  webhook_monitoring_test.rs
tests/: Cargo.toml
tests/src/: conflict_matrix.rs  lib.rs  mock_relay.rs  module_conflicts.rs  signer_service.rs  utils.rs
tests/tests/: dirk_tests.rs  integration_auth_security.rs  integration_registration_cache.rs  integration_relay_coordination.rs  module_integration.rs  pbs_get_header.rs  pbs_get_status.rs  pbs_post_validators.rs  signer_jwt_auth.rs  signer_request_sig.rs  xga_mock_relay_test.rs
