[package]
name = "xga-commitment"
version = "0.1.2"
edition = "2021"

[lib]
name = "xga_commitment"
path = "src/lib.rs"

[[bin]]
name = "xga-commitment"
path = "src/main.rs"

[[bin]]
name = "xga-cli"
path = "src/bin/xga_cli.rs"

[dependencies]
# Commit Boost integration
commit-boost = { git = "https://github.com/Commit-Boost/commit-boost-client" }

# Alloy for Ethereum types and blockchain interaction
alloy = { version = "0.12.5", features = ["full", "node-bindings", "providers", "signers", "network"] }
alloy-rpc-types = { version = "0.12.5", features = ["beacon"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-retry2 = { version = "0.5", features = ["jitter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing and validation
url = "2.5"

# SSZ and hashing
tree_hash = "0.6"
tree_hash_derive = "0.6"
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"

# Crypto
blst = "0.3"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"
constant_time_eq = "0.3"

# HTTP client for relay communication
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Lazy initialization
lazy_static = "1.4"
once_cell = "1.19"

# Time
chrono = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
mockito = "1.2"
# Property-based testing
proptest = "1.4"
# Fuzzing utilities
arbitrary = { version = "1.3", features = ["derive"] }

[build-dependencies]
